// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Textarea Auto Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 hKiMoY sc-lbhJmS jGUoFk sc-iNGGwv iUlYxF"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 hKiMoY sc-lbhJmS jGUoFk sc-iNGGwv iUlYxF"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 gSLiiy sc-lbhJmS bIHgnv sc-iNGGwv iUlYxF"
      disabled=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Min Max Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 hKiMoY sc-lbhJmS jGUoFk sc-iNGGwv iUlYxF"
      rows="4"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 hKiMoY sc-lbhJmS CnZVJ sc-iNGGwv iUlYxF"
      placeholder="Type something..."
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Read Only 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 hKiMoY sc-lbhJmS jGUoFk sc-iNGGwv iUlYxF"
      readonly=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 hKiMoY sc-lbhJmS jGUoFk sc-iNGGwv iUlYxF"
      placeholder="Type something..."
    />
  </div>
</div>
`;
